--- a/select.html
+++ b/select.html
@@ -22,8 +22,10 @@
     <button>Let's do this thing!</button>
 </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="pull.js"></script>
 
 
 </body>
+
+</html>
